--- a/frontend/src/components/settings-component/settings.styles.css
+++ b/frontend/src/components/settings-component/settings.styles.css
@@ -254,7 +254,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .settings-grid {
